added links to home page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Home</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1>The Smashelor</h1>
+<ul>
+    <li><a href="https://www.twitch.tv/certainly_unsure">Stream</a></li>
+    <li><a href="">Youtube</a></li>
+    <li><a href="">Brackets</a></li>
+</ul>
 </body>
 </html>
