--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+# front matter tells Jekyll to process Liquid
+---
 <!doctype html>
 <html>
 <head>
@@ -5,6 +8,7 @@
     <title>Home</title>
 </head>
 <body>
+{% include navigation.html %}
 <h1>The Smashelor</h1>
 <ul>
     <li><a href="https://www.twitch.tv/certainly_unsure">Stream</a></li>
