added blurb section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 {% include navigation.html %}
 <h1>The Smashelor</h1>
+<p>Blurb about The Smashelor</p>
 <ul>
     <li><a href="https://www.twitch.tv/certainly_unsure">Stream</a></li>
     <li><a href="">Youtube</a></li>
