--- a/episodes.html
+++ b/episodes.html
@@ -5,10 +5,8 @@ title: Blog
 <h1>Past Episodes</h1>
 
 <ul>
-    {% for post in site.posts %}
     <li>
-        <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-        <p>{{ post.excerpt }}</p>
+        <h2><a href="UI4.html">{{ site.data.UI4.title}}</a></h2>
     </li>
-    {% endfor %}
+
 </ul>
