--- a/index.html
+++ b/index.html
@@ -5,16 +5,43 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/883a62eb94.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 <body>
 {% include navigation.html %}
-<h1>The Smashelor</h1>
-<p>Blurb about The Smashelor</p>
+<div>
+    <p>.</p>
+</div>
+<div class="flex items-center bg-gray-200 h-24">
+    <div class="flex-1 text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">
+
+        <a href="#" class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline">The Smashelor</a>
+        <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">A Chicago Smash Bros. Invitational</div>
+        <p class="mt-2 text-gray-600">
+            Bringing together a mix of Chicagos best players and other regulars, the Smashelor
+            is a 16-person invitational serving its players and viewers only the finest Melee,
+            week after week. Join us on Fridays at 7pm Central at <a href="https://www.twitch.tv/thesmashelor">Twitch.tv/TheSmashelor</a></p>
+    </div>
+
+</div>
+<div>
+    <p>.</p>
+</div>
+<div>
+    <iframe
+            src="https://player.twitch.tv/?channel=thesmashelor"
+            height="360"
+            width="640"
+            scrolling="no"
+            allowfullscreen="true">
+    </iframe>
+</div>
 <ul>
-    <li><a href="https://www.twitch.tv/certainly_unsure">Stream</a></li>
-    <li><a href="">Youtube</a></li>
-    <li><a href="">Brackets</a></li>
+    <li><a href="https://www.twitch.tv/thesmashelor"><i class="fab fa-twitch"></i>Stream</a></li>
+    <li><a href="https://www.youtube.com/channel/UCHPAtCVwnI_AWUlZpOzTRdw"><i class="fab fa-youtube"></i>Youtube</a></li>
+    <li><a href="https://challonge.com/users/thesmashelor/tournaments"><i class="fas fa-trophy"></i>Brackets</a></li>
 </ul>
 </body>
 </html>
