--- a/episodes.html
+++ b/episodes.html
@@ -2,6 +2,13 @@
 layout: default
 title: Blog
 ---
+<!doctype html>
+<html>
+<head>
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <script src="https://kit.fontawesome.com/883a62eb94.js" crossorigin="anonymous"></script>
+    <meta charset="utf-8"><meta charset="utf-8">
+</head>
 <h1>Past Episodes</h1>
 
 <ul>
@@ -10,3 +17,5 @@ title: Blog
     </li>
 
 </ul>
+</body>
+</html>
