added next episode, deleted bad styles:

--- a/episodes.html
+++ b/episodes.html
@@ -5,7 +5,6 @@ title: Blog
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="/assets/css/styles.css">
     <script src="https://kit.fontawesome.com/883a62eb94.js" crossorigin="anonymous"></script>
     <meta charset="utf-8"><meta charset="utf-8">
 </head>
@@ -15,7 +14,9 @@ title: Blog
     <li>
         <h2><a href="UI4.html">{{ site.data.UI4.title}}</a></h2>
     </li>
-
+    <li>
+        <h2><a href="S1E1.html">{{ site.data.S1E1.title}}</a></h2>
+    </li>
 </ul>
 </body>
 </html>
