--- a/index.html
+++ b/index.html
@@ -5,47 +5,30 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="/assets/css/styles.css">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
+    <!--<link rel="stylesheet" href="/assets/css/styles.css">-->
+    <!--<link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">-->
     <script src="https://kit.fontawesome.com/883a62eb94.js" crossorigin="anonymous"></script>
     <title>Home</title>
 </head>
 <body>
 {% include navigation.html %}
-<div>
-    <p></p>
-</div>
-<div class="flex items-center h-24">
-    <div class="flex-1 text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">
-        <a href="#" class="block mt-1 text-lg leading-tight font-semibold text-gray-900 hover:underline">The Smashelor</a>
-        <div class="uppercase tracking-wide text-sm text-indigo-600 font-bold">A Chicago Smash Bros. Invitational</div>
-        <p class="mt-2 text-gray-600">
-            Bringing together a mix of Chicago's best players and other regulars, the Smashelor
-            is a 16-person invitational serving its players and viewers only the finest Melee,
-            week after week.</p>
-        <p class="mt-2 text-gray-600">
-            Join us on Fridays at 7pm Central at <a href="https://www.twitch.tv/thesmashelor">Twitch.tv/TheSmashelor</a>
-        </p>
-    </div>
-</div>
-<div>
-    <p>.</p>
-</div>
-
-<div class="flex">
-
-
-</div>
-<div>
-    <iframe
-            class="center"
-            src="https://player.twitch.tv/?channel=thesmashelor"
-            height="360"
-            width="640"
-            scrolling="no"
-            allowfullscreen="true">
-    </iframe>
-</div>
+<h1>The Smashelor</h1>
+<h2>A Chicago Smash Bros. Invitational</h2>
+<p>
+    Bringing together a mix of Chicago's best players and other regulars, the Smashelor
+    is a 16-person invitational serving its players and viewers only the finest Melee,
+    week after week.
+</p>
+<p>
+    Join us on Fridays at 7pm Central at <a href="https://www.twitch.tv/thesmashelor">Twitch.tv/TheSmashelor</a>
+</p>
+<iframe
+        src="https://player.twitch.tv/?channel=thesmashelor"
+        height="360"
+        width="640"
+        scrolling="no"
+        allowfullscreen="true">
+</iframe>
 {% include external.html %}
 
 </body>
