--- a/episodes.html
+++ b/episodes.html
@@ -20,6 +20,9 @@ title: Blog
     <li>
         <h2><a href="S1E2.html">{{ site.data.S1E2.title}}</a></h2>
     </li>
+    <li>
+        <h2><a href="S1E2.html">{{ site.data.S1E3.title}}</a></h2>
+    </li>
 </ul>
 </body>
 </html>
