--- a/episodes.html
+++ b/episodes.html
@@ -21,10 +21,10 @@ title: Blog
         <h2><a href="S1E2.html">{{ site.data.S1E2.title}}</a></h2>
     </li>
     <li>
-        <h2><a href="S1E2.html">{{ site.data.S1E3.title}}</a></h2>
+        <h2><a href="S1E3.html">{{ site.data.S1E3.title}}</a></h2>
     </li>
     <li>
-        <h2><a href="S1E2.html">{{ site.data.S1E3D.title}}</a></h2>
+        <h2><a href="S1E3D.html">{{ site.data.S1E3D.title}}</a></h2>
     </li>
 </ul>
 </body>
