--- a/episodes.html
+++ b/episodes.html
@@ -26,6 +26,9 @@ title: Blog
     <li>
         <h2><a href="S1E3D.html">{{ site.data.S1E3D.title}}</a></h2>
     </li>
+    <li>
+        <h2><a href="S1E4.html">{{ site.data.S1E4.title}}</a></h2>
+    </li>
 </ul>
 </body>
 </html>
