--- a/episodes.html
+++ b/episodes.html
@@ -32,6 +32,9 @@ title: Blog
     <li>
         <h2><a href="S1E5.html">{{ site.data.S1E5.title}}</a></h2>
     </li>
+    <li>
+        <h2><a href="S1E5.html">{{ site.data.S1E6.title}}</a></h2>
+    </li>
 </ul>
 </body>
 </html>
